--- a/sb/index.html
+++ b/sb/index.html
@@ -35,11 +35,57 @@
             </div>
         </nav>
         <!-- Page content-->
-        <div class="container">
-            <div class="text-center mt-5">
-                <h1>A Bootstrap 5 Starter Template</h1>
-                <p class="lead">A complete project boilerplate built with Bootstrap</p>
-                <p>Bootstrap v5.2.3</p>
+        <div class="container-fluid mt-3">
+            <h1>My Personal Profile Webpage</h1>
+            <div class="row">
+                <div class="col-md text-bg-light">
+                    <h2>About Me</h2>
+                    <p>Hello! My name is Shanteiy A. Camama, but you can also call me Shan. I am currently in 2nd year of college, and here are some things about me.</p>
+                </div>
+                <div class="col-md text-bg-light">
+                    <h2>Education / Achievements</h2>
+                    <ul>
+                        <li>2022-2023: 1st Place in MathemArtists Art Making Competition, Grade 12 with honor</li>
+                        <li>2023-2024: 1st-year Honor student</li>
+                    </ul>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md text-bg-light">
+                    <h2>Course</h2>
+                    <p>Bachelor of Science in Computer Science specializing in Software Systems.</p>
+                </div>
+                <div class="col-md text-bg-light">
+                    <h2>IT Experience</h2>
+                    <p>I have worked on various IT projects including:</p>
+                    <ul>
+                        <li>Front-end and Back-end programming</li>
+                        <li>Database management</li>
+                    </ul>
+                </div>
+                <div class="col-md text-bg-light">
+                    <h2>Hobbies & Interests</h2>
+                    <p>Here are some of my hobbies:</p>
+                    <ul>
+                        <li>Reading manhwas and manga</li>
+                        <li>Playing instruments like the ukulele and keyboard</li>
+                        <li>Volleyball</li>
+                        <li>Traveling</li>
+                    </ul>
+                </div>
+                <div class="col-md text-bg-light">
+                    <h2>Goals In Life / Dream</h2>
+                    <p>My dream is to become a successful software developer like my sister and be able to travel around the world once I'm financially stable.</p>
+                </div>
+                <div class="col-md text-bg-light">
+                    <h2>Picture Gallery</h2>
+                    <p>Here are some pictures that represent me:</p>
+                    <img src="https://i.pinimg.com/474x/ee/2a/71/ee2a7149341c2b23ae2e9c7358ec247d.jpg" alt="Placeholder Image 1" width="150">
+                    <img src="https://i.pinimg.com/736x/ac/e3/16/ace3163f3edb4b0c311ea0e56bb9d5d1.jpg" alt="Placeholder Image 2" width="150">
+                    <img src="https://i.pinimg.com/736x/bb/e9/85/bbe985b0966c8cd51df295e6389e080c.jpg" alt="Placeholder Image 3" width="150">
+                    <img src="https://i.pinimg.com/736x/06/ad/da/06adda610b5c8af46f61afa7779760a0.jpg" alt="Placeholder Image 4" width="150">
+                </div>
             </div>
         </div>
         <!-- Bootstrap core JS-->
